// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown component default snapshot 1`] = `
<div>
  <div
    className="dropdown"
    disabled={false}
    onClick={[Function]}
  >
    
  </div>
</div>
`;

exports[`Dropdown component snapshot with children 1`] = `
<div>
  <div
    className="dropdown"
    disabled={false}
    onClick={[Function]}
  >
    
  </div>
</div>
`;

exports[`Dropdown component snapshot with className 1`] = `
<div>
  <div
    className="dropdown className"
    disabled={false}
    onClick={[Function]}
  >
    
  </div>
</div>
`;

exports[`Dropdown component snapshot with disabled 1`] = `
<div>
  <div
    className="dropdown disabled"
    disabled={true}
    onClick={[Function]}
  >
    
  </div>
</div>
`;

exports[`Dropdown component snapshot with disabledClassName 1`] = `
<div>
  <div
    className="dropdown disabledClassName"
    disabled={true}
    onClick={[Function]}
  >
    
  </div>
</div>
`;

exports[`Dropdown component snapshot with label 1`] = `
<div>
  <div
    className="dropdown"
    disabled={false}
    onClick={[Function]}
  >
    menu1
  </div>
</div>
`;
